[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorithm"
version = "0.1.0"
description = "Algorithm practice project"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["algorithm"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true